--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "type": "module",
   "dependencies": {
     "chrono-node": "^2.9.0",
-    "dayjs": "^1.11.18",
     "discord.js": "^14.23.2",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "luxon": "^3.7.2"
   },
   "devDependencies": {
     "jest": "^30.2.0"
